# example-poetry-monorepo

./: README.md
app1/: Dockerfile  build.sh  pyproject.toml
app1/app1/: main.py
app2/: Dockerfile  pyproject.toml
lib/lib1/: pyproject.toml
lib/lib1/lib1/: __init__.py
lib/lib2/: pyproject.toml
lib/lib3/: pyproject.toml
