[tool.poetry]
name = "app1"
version = "0.1.0"
description = ""
authors = ["jared jwelch92@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
lib1 = {path = "../lib/lib1", develop = true}
lib2 = {path = "../lib/lib2", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
