[tool.poetry]
name = "app2"
version = "0.1.0"
description = ""
authors = ["jared jwelch92@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
lib2 = {path = "../lib/lib2", develop = true}
lib3 = {path = "../lib/lib3", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
